[tool.poetry]
name = "checkpost"
version = "0.1.0"
description = ""
authors = ["Sujay <suji.kumar91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.5"
dynaconf = "^3.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Flask = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
